testsuite/tests/annotations/should_fail/annfail13.stderr

annfail13.hs:4:14: error:
    parse error on input ‘1’ (possibly incorrect indentation or mismatched brackets)
